2014-03-26  Tim Lochmueller  <tim@fruit-lab.de>

	* Remove global statements and use $GLOBAL

2014-03-25  Tim Lochmueller  <tim@fruit-lab.de>

	* Wrong severity in call to t3lib_div::devLog()
	* Wrap removed function t3lib_div::intval_positive in the Scheduler task to support 6.x
	* Fix old PHP4 constructor call in the cleaner task
	* Backport changes from TER version to trunk
	* Set dependencies to TYPO3 4.5 minimum
	* Wrap testInt once more, to prefer the TYPO3 CMS 4.7 t3lib_utility_Math function
	* Cleanup and add same classes to the ext_autoload.php
	* Remove PATH_t3lib usage to fit 6.x

2014-03-11  Klaus Bitto  <klaus@netcreators.nl>

	* Fixed bug: Call to undefined method TYPO3\CMS\Core\Utility\GeneralUtility::intval_positive() in class.tx_ncstaticfilecache_tasks_processDirtyPages_AdditionalFieldProvider.php (Thank you, Hendrik Reimers)
	* Increased compatibility to TYPO3 6.2.

2014-03-07  Klaus Bitto  <klaus@netcreators.nl>

	* Integrated TYPO3 6 compatibility adjustments for TER release as v2.4.0. (Selective merge from https://svn.typo3.org/TYPO3v4/Extensions/nc_staticfilecache/trunk/.)

2010-10-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Database elements are removed if directory on the filesystem exists, but could not be accessed

2010-09-20  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Removing of static files returned wrong boolean value
	* Fixed bug #9850: Small coding errors (thanks to Axel Jung)
	* Raised version to 2.3.3

2010-09-08  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed svn:eol-style of PHP and text files
	* Fixed bug: Only remove database elements if removal in filesystem was successful
	* Added feature: Integrate logging to devLog if clearing static caches failes
	* Raised version to 2.3.2

2010-07-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Typing error in hook name
	* Fixed bug: Infomodule shows creation time instead of last modification

2010-07-15  Oliver Hader  <oliver@typo3.org>
